修复了一些BUG

--- a/online_eduservice/src/main/resources/application.yml
+++ b/online_eduservice/src/main/resources/application.yml
@@ -29,3 +29,6 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl   # mybatis日志
+logging:
+  level:
+    root: warn  # 设置日志级别(只有warn以及warn级别以上的才输出到控制台)
