修复了一些BUG

--- a/online_eduservice/pom.xml
+++ b/online_eduservice/pom.xml
@@ -75,6 +75,17 @@
             <version>2.10.1</version>
         </dependency>
 
+        <!--xls-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
