修复了一些BUG

--- a/online_eduservice/src/main/resources/application.yml
+++ b/online_eduservice/src/main/resources/application.yml
@@ -40,3 +40,4 @@ aliyun:
       accesskeyid: LTAI4FhTVQJEAXrJm9ZzVRE1
       accesskeysecret: EsWj2EuPeHYRwdKCbVoXgBmaTv3Wzp
       bucketname: edu-teacher-icon
+      host: career
