--- a/online_service/pom.xml
+++ b/online_service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>online_eduservice</artifactId>
+    <artifactId>online_service</artifactId>
 
     <dependencies>
 
