修复了一些BUG

--- a/online_ekservice/pom.xml
+++ b/online_ekservice/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>online_ekservice</artifactId>
 
+    <dependencies>
+        <!--注册中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
