--- a/online_vidservice/pom.xml
+++ b/online_vidservice/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>online_common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!--服务注册-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-core</artifactId>
