--- a/online_vidservice/src/main/resources/application.yml
+++ b/online_vidservice/src/main/resources/application.yml
@@ -14,3 +14,9 @@ aliyun: #阿里云 vod
     file:
       keyid: LTAI4FhTVQJEAXrJm9ZzVRE1
       keysecret: EsWj2EuPeHYRwdKCbVoXgBmaTv3Wzp
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:9002/eureka/ #指定注册中心地址
+  instance:
+    prefer-ip-address: true #eureka服务器上获取的是服务器的ip地址，否则是主机名
