--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <swagger.version>2.7.0</swagger.version>
         <poi.version>3.9</poi.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <cloud.version>Finchley.SR2</cloud.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,16 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!--Spring Cloud-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!--mybatis-plus 持久层-->
             <dependency>
                 <groupId>com.baomidou</groupId>
