--- a/online_ucservice/pom.xml
+++ b/online_ucservice/pom.xml
@@ -46,6 +46,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
 
         <!--lombok用来简化实体类：需要安装lombok插件-->
         <dependency>
