--- a/online_vidservice/pom.xml
+++ b/online_vidservice/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
