--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <poi.version>3.9</poi.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <cloud.version>Finchley.SR2</cloud.version>
+        <guava.version>28.0-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -81,6 +82,12 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <!--xls-->
